# orchestrator-tower

./: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.claude/: CLAUDE.md  settings.local.json
docs/: CODE_REVIEW_REPORT.md  HANDOVER.md  Orchestrator_Tower_Spec_v2.md  TASK_17_18_SPEC.md
sidecar/: package-lock.json  package.json  tsconfig.json
sidecar/src/: index.ts
sidecar/src/agent-manager/: agent-manager.test.ts  agent-manager.ts  cli-detector.ts  index.ts  spawn-master.ts  spawn-worker.ts  types.ts
sidecar/src/hitl/: classifier.test.ts  classifier.ts  index.ts
sidecar/src/ipc/: client.test.ts  client.ts  index.ts  messages.ts  platform.ts
sidecar/src/quota/: index.ts  manager.test.ts  manager.ts  rate-limit.ts
sidecar/src/recovery/: index.ts  session-resume.test.ts  session-resume.ts  task-state.test.ts  task-state.ts
sidecar/src/stream-parser/: claude-parser.ts  gemini-acp-parser.ts  index.ts  line-buffer.ts  (+5 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/db/: hitl.rs  mod.rs  models.rs  nodes.rs  schema.rs
src-tauri/src/git/: crash_commit.rs  mod.rs  rollback.rs  snapshot.rs  worktree.rs
src-tauri/src/ipc/: handler.rs  messages.rs  mod.rs
src-tauri/src/lifecycle/: agent.rs  mod.rs  project.rs  projects_json.rs
src-tauri/src/recovery/: mod.rs  state_rebuild.rs
src/i18n/: en.json  index.ts  zh-TW.json
src/store/: agentStore.test.ts  agentStore.ts  notificationStore.ts  uiStore.test.ts  uiStore.ts
src/test/: setup.ts
src/types/: events.ts
(+28 files in other folders)
